Implementation of the Notifications feature and partial implementation of the logic to extend course access after the access period expires.